<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BetterQ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="attempts">Attempts Left:</string>
    <string name="ui">UI Elements</string>
    <string name="map">Map</string>
    <string name="list">Check In</string>
    <string name="clock">Clock</string>
    <string name="analog_clock">Analog Clock</string>
    <string name="digital_clock">Digital Clock</string>
    <string name="show_map_string">Show Map</string>
    <string name="location_string">Enter Location</string>
    <string name="search_text">Where are you?</string>
    <string name="checkbox_string">This is a checkbox</string>
    <string name="check_box_not_checked">I am not checked</string>
    <string name="hide_checkbox">Hide CheckBox</string>
    <string name="radio_no_choice">No Choice Made</string>
    <string name="choice_text1">Army</string>
    <string name="choice_text2">Freedom</string>
    <string name="choice_text3">Whatever</string>

    <string-array name="visited_capitols">
        <item>Jerusalem</item>
        <item>London</item>
        <item>Paris</item>
        <item>Moscow</item>
        <item>Prague</item>
        <item>Brussels</item>
        <item>Luxembourg City</item>
        <item>Amsterdam</item>
    </string-array>

    <string name="city_prompt">Pick a City:</string>
    <string name="title_activity_list_with_checkbox">ListWithCheckbox</string>
    <string name="title_activity_my_places">MyPlacesActivity</string>

</resources>
