<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/ui_checkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_not_checked"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/ui_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_checkbox"
        android:textSize="24sp" />
    
    <!-- radio buttons -->
    <TextView
        android:id="@+id/ui_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_no_choice"
        android:textSize="24sp">
    </TextView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_text2" 
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_text1"
            android:textSize="24sp" />
        
        <RadioButton
            android:id="@+id/choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_text3"
            android:textSize="24sp" />
        
    </RadioGroup>
    
    <!-- ratting bar -->
    <TextView
        android:id="@+id/ui_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp" >
    </TextView>
    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5" >
    </RatingBar>
    
    <!-- combo box -->
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dip" >
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/city_prompt"
	        android:textAppearance="@android:attr/textAppearanceLarge"
	        android:textSize="24sp" />
	
	    <Spinner
	        android:id="@+id/spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="24sp" />

	</LinearLayout>

</LinearLayout>