<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_centerHorizontal="true"
    	android:layout_marginTop="18dp"
    	android:text="@string/hello_world"
    	android:textAppearance="@android:attr/textAppearanceLarge" />
     -->
     
     <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_marginTop="50dp"
    	android:text="@string/username"
    	android:textAppearance="@android:attr/textAppearanceMedium" />
    
     <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignBottom="@+id/tvUsername"
    	android:layout_toRightOf="@+id/tvUsername"
    	android:ems="10">
    	
        <requestFocus />
     </EditText>
      
     <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignLeft="@+id/tvUsername"
    	android:layout_below="@+id/tvUsername"
    	android:layout_marginTop="38dp"
    	android:text="@string/password"
    	android:textAppearance="@android:attr/textAppearanceMedium" />
    
     <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignBottom="@+id/tvPassword"
    	android:layout_alignLeft="@+id/etUsername"
    	android:ems="10"
    	android:inputType="textPassword" />
    
    <Button 
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/tvPassword"
    	android:layout_marginTop="55dp"
    	android:onClick="register"
    	android:text="@string/register" />
    <Button 
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/etPassword"
    	android:layout_toRightOf="@+id/btnRegister"
    	android:layout_marginTop="55dp"
    	android:onClick="login"
    	android:text="@string/login" />
    

    
    <!--  
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignLeft="@+id/textView3"
    	android:layout_below="@+id/textView3"
    	android:layout_marginLeft="30dp"
    	android:layout_marginTop="48dp"
    	android:text="@string/attempts"
    	android:textAppearance="@android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignRight="@+id/textView1"
    	android:layout_alignTop="@+id/textView4"
    	android:text="TextView" />
    -->
</RelativeLayout>
